<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >
        
        <Button
            android:id="@+id/pontos_interesse"
            android:layout_marginBottom="10dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/PI" />

        <Button
            android:id="@+id/mapa"
            android:layout_marginBottom="10dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Mapa" />

        <Button
            android:id="@+id/categorias"
            android:layout_marginBottom="10dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Categorias" />
        
        <Button
            android:id="@+id/btnwebservice"
            android:layout_marginBottom="10dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/webservice" />

        <Button
            android:id="@+id/sair"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/exit" />
    </LinearLayout>

</LinearLayout>