<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/txtPIdescricao"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:imeOptions="actionNext" >

                <requestFocus />
            </EditText>

            <Spinner
                android:id="@+id/spinnertipopi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/txtPIlat"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:ems="10"
                    android:hint="@string/lat"
                    android:inputType="numberDecimal" 
                    android:visibility="gone">
                </EditText>

                <EditText
                    android:id="@+id/txtPIlon"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:ems="10"
                    android:hint="@string/lon"
                    android:inputType="numberDecimal" 
                    android:visibility="gone"
                    />
                
                </LinearLayout>

                <CheckBox
                    android:id="@+id/favorite"
                    style="?android:attr/starStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/addeditPI"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_weight="50"
                        android:text="@string/confirm" />

                    <Button
                        android:id="@+id/cancelPI"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_weight="50"
                        android:text="@string/cancel" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
